services/authentik/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Authentik
    gethomepage.dev/description: SSO / IdP del homelab
    gethomepage.dev/group: Plataforma
    gethomepage.dev/icon: authentik.png
    gethomepage.dev/href: https://authentik.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - authentik.bonchan.org
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
